<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lvl5"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@color/top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scientific_calculator"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="#1C1C1C"

            android:textSize="100sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/lvl1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl1"
            android:text="@string/clear"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl1"
            android:text="@string/del"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl1"
            android:text="@string/div"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl2"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl2"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl2"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/lvl2"
            android:text="@string/mult"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="#FFFFFF"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl3"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl3"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl3"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl3"
            android:text="@string/sub"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl4"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl4"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl4"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl4"
            android:text="@string/add"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl5"
            android:text="@string/neg"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl5"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/lvl5"
            android:text="@string/dec"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/eq"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>